--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html><head>
-<link rel="stylesheet" href="/chartist.min.css"/>
-<script src="/chartist.min.js"/>
+<link rel="stylesheet" href="wordpresschartist-js/chartist.min.css"/>
+<script src="wordpresschartist-js/chartist.min.js"/>
 </head>
 <body>
 
