--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html><head>
-<link rel="stylesheet" href="wordpresschartist-js/chartist.min.css"/>
-<script src="wordpresschartist-js/chartist.min.js"/>
+<link rel="stylesheet" href="/wordpresschartist-js/chartist.min.css" media="all"/>
+
+<script src="/wordpresschartist-js/chartist.min.js"></script>
 </head>
 <body>
 
