--- a/test.html
+++ b/test.html
@@ -5,8 +5,19 @@
 </head>
 <body>
 
-var data = { // A labels array that can contain any sort of values labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'], // Our series array that contains series objects or in this case series data arrays series: [ [5, 2, 4, 2, 0] ] }; // Create a new line chart object where as first parameter we pass in a selector // that is resolving to our chart container element. The Second parameter // is the actual data object. new Chartist.Line('.ct-chart', data);
+var data = { 
+// A labels array that can contain any sort of values labels: 
+['Mon', 'Tue', 'Wed', 'Thu', 'Fri'], 
+// Our series array that contains series objects or in this case series data arrays series: 
+[ 
+[5, 2, 4, 2, 0] 
+] }; 
+// Create a new line chart object where as first parameter we pass in a selector 
+// that is resolving to our chart container element. The Second parameter 
+// is the actual data object. 
 
-Include in HTML: <div class=ct-chart ct-perfect-fourth></div>
+new Chartist.Line('.ct-chart', data);
+
+Include in HTML: <div class="ct-chart ct-perfect-fourth"></div>
 </body>
  </html>
