--- a/test.html
+++ b/test.html
@@ -6,10 +6,10 @@
 <body>
 
 var data = { 
-// A labels array that can contain any sort of values labels: 
-['Mon', 'Tue', 'Wed', 'Thu', 'Fri'], 
-// Our series array that contains series objects or in this case series data arrays series: 
-[ 
+// A labels array that can contain any sort of values
+labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'], 
+// Our series array that contains series objects or in this case series data arrays 
+series: [ 
 [5, 2, 4, 2, 0] 
 ] }; 
 // Create a new line chart object where as first parameter we pass in a selector 
