--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <script src="/wordpresschartist-js/chartist.min.js"></script>
 </head>
 <body>
-
+<script type="text/javascipt">
 var data = { 
 // A labels array that can contain any sort of values
 labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'], 
@@ -17,7 +17,7 @@ series: [
 // is the actual data object. 
 
 new Chartist.Line('.ct-chart', data);
-
+</script>
 Include in HTML: <div class="ct-chart ct-perfect-fourth"></div>
 </body>
  </html>
