--- a/test.html
+++ b/test.html
@@ -15,8 +15,12 @@ series: [
 // Create a new line chart object where as first parameter we pass in a selector 
 // that is resolving to our chart container element. The Second parameter 
 // is the actual data object. 
+var options = {
+  width: 300,
+  height: 200
+};
 
-new Chartist.Line('.ct-chart', data);
+new Chartist.Line('.ct-chart', data,options);
 </script>
 Include in HTML: <div class="ct-chart ct-perfect-fourth"></div>
 </body>
