--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-  <link href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" rel="stylesheet" type="text/css" />
+  <script src="/wordpresschartist-js/chartist.min.js"></script>
+  <link href="/wordpresschartist-js/chartist.min.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
   <title>Chartist | Simple line chart</title>
 </head>
