--- a/test.html
+++ b/test.html
@@ -9,17 +9,23 @@
 <body>
   <div class="ct-chart"></div>
   <script type="text/javascript">
-  new Chartist.Line('.ct-chart', {
-  labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
-  series: [
-    [2, 3, 2, 4, 5],
-    [0, 2.5, 3, 2, 3],
-    [1, 2, 2.5, 3.5, 4]
-  ]
-}, {
-  width: 320,
-  height: 240
-});
+  var data = { 
+	labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'], 
+	series: [ 
+		{ 
+			data: [5, 2, 4, 2, 0] 
+		}
+	] 
+}; 
+// Create a new line chart object where as first parameter we pass in a selector 
+// that is resolving to our chart container element. The Second parameter 
+// is the actual data object. 
+var options = {
+  width: 300,
+  height: 200
+};
+
+new Chartist.Line('.ct-chart', data,options);
 </script>
 </body>
 </html>
