--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   <title>Chartist | Simple line chart</title>
 </head>
 <body>
-  <div class="ct-chart"></div>
+  <div class="ct-chart ct-perfect-fourth"></div>
   <script type="text/javascript">
   var data = { 
 	labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May'], 
@@ -18,15 +18,7 @@
 		[302,80,16,5,0] 
 	] 
 }; 
-// Create a new line chart object where as first parameter we pass in a selector 
-// that is resolving to our chart container element. The Second parameter 
-// is the actual data object. 
-var options = {
-  width: 800,
-  height: 1200
-};
-
-new Chartist.Line('.ct-chart', data,options);
+new Chartist.Line('.ct-chart', data);
 </script>
 </body>
 </html>
